--- a/.github/workflows/standardize.yml
+++ b/.github/workflows/standardize.yml
@@ -12,7 +12,10 @@ jobs:
         working-directory: scripts
         run: python autoformat.py
       - name: Commit changes
-        run: git commit -am "Run autoformatting"
+        run: |
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config user.name "github-actions[bot]"
+        git commit -am "Run autoformatting"
       - name: Create Pull Request
         uses: actions/github-script@v6
         with:
